Fixed the interactivity of the share-button on mobile and desktop resolutions.

--- a/styles.scss
+++ b/styles.scss
@@ -102,60 +102,48 @@ body {
     button:active {
         background-color: hsl(217, 19%, 35%);
     }
-
-    .pop-up-container {
+    dialog {
         position: absolute;
-        top: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        min-width: 15rem;
+        padding: 10px;
         background-color: hsl(217, 19%, 35%);
-        border-bottom-right-radius: .5rem;
+        border-style: none;
         border-bottom-left-radius: .5rem;
+        border-bottom-right-radius: .5rem;
+        
+        h3 {
+            color: hsl(212, 23%, 69%);
+            text-transform: uppercase;
+            letter-spacing: .3rem;
+        }
+    }
 
-        dialog {
+    .pop-up-button {
+        height: 2rem;
+        width: 2rem;
+        margin-right: .5rem;
+        border-style: none;
+        border-radius: 50%;
+        background-image: url("images/icon-share.svg");
+        background-repeat: no-repeat;
+        background-position: center center;
+
+        .sr-only {
             position: absolute;
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-            min-width: 15rem;
-            padding: 10px;
-            background-color: hsl(217, 19%, 35%);
-            border-style: none;
-            border-bottom-left-radius: .5rem;
-            border-bottom-right-radius: .5rem;
-            
-            h3 {
-                color: hsl(212, 23%, 69%);
-                text-transform: uppercase;
-                letter-spacing: .3rem;
-            }
+            left: -10000px;
+            top: auto;
+            width: 1px;
+            height: 1px;
+            overflow: hidden;
         }
-
-        .pop-up-button {
-            height: 2rem;
-            width: 2rem;
-            margin-right: .5rem;
-            border-style: none;
-            border-radius: 50%;
-            background-image: url("images/icon-share.svg");
-            background-repeat: no-repeat;
-            background-position: center center;
-
-            .sr-only {
-                position: absolute;
-                left: -10000px;
-                top: auto;
-                width: 1px;
-                height: 1px;
-                overflow: hidden;
-            }
-        }
-        a {
-            img {
-                height: 1rem;
-                display: block;
-            }
+    }
+    a {
+        img {
+            height: 1rem;
+            display: block;
         }
     }
 }
